<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">


        <item
            android:id="@+id/item_home"
            android:icon="@drawable/homeicon"
            android:title="@string/home"/>

     <!--   <item
            android:id="@+id/item_profile"
            android:icon="@drawable/profileicon"
            android:title="@string/myprofile"/>-->

        <item
            android:id="@+id/item_changepassword"
            android:icon="@drawable/passwordicon"
            android:title="@string/changepassword"
            />

        <item
            android:id="@+id/item_orderhistory"
            android:icon="@drawable/orderhistoryicon"
            android:title="@string/orderhistory"
            />

        <item
            android:id="@+id/item_inventory"
            android:icon="@drawable/orderhistoryicon"
            android:title="@string/inventory"
            />

        <item
            android:id="@+id/item_staff"
            android:icon="@drawable/stafficon"
            android:title="@string/staff"
            />


        <item
            android:id="@+id/item_setting"
            android:icon="@mipmap/setting"
            android:title="@string/setting"
            />

        <item
            android:id="@+id/item_logout"
            android:icon="@drawable/logouticon"
            android:title="@string/logout"
           />

    </group>

</menu>